[fixes #70] Wrong Color in GeoNode menu

--- a/geonode/static/geonode/less/base.less
+++ b/geonode/static/geonode/less/base.less
@@ -1776,3 +1776,6 @@ form-inline {
       background-color: black;
     }
 }
+.inactive a {
+  background-color: inherit !important;
+}
